# proxybot

./: .gitignore  ARCHITECT-BRIEF.md  BUILD-LOG.md  CLAUDE.md  README.md  REVIEW-FEEDBACK.md  REVIEW-REQUEST-TESTS.md  REVIEW-REQUEST.md  SESSION-CHECKPOINT.md  package.json  progress.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
Formula/: proxybot-tui.rb
docs/: feature-alignment-report.md  roadmap.md
docs/sdd/: competitor-improvements.md  competitors-analysis.md  improvement-roadmap.md
handoff/: REVIEW-FEEDBACK.md
homebrew/: README.md  proxybot-tui.rb
ios/: project.yml
ios/PacketTunnel/: Info.plist  PacketTunnel.entitlements  (+1 more)
ralph/: prd.json  progress.txt
src/: App.css  App.tsx  NewApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.sh  tauri.conf.json
src-tauri/docs/sdd/: tui-testing-strategy.md
src-tauri/src/: adb.rs  anomaly.rs  app_rules.rs  cert.rs  cert_server.rs  config.rs  dag.rs  db.rs  deploy.rs  dns.rs  error.rs  har.rs  history.rs  infer.rs  lib.rs  main.rs  mockgen.rs  network.rs  normalize.rs  pf.rs  proxy.rs  replay.rs  rules.rs  scaffoldgen.rs  state_machine.rs  tun.rs  update_check.rs  vision.rs
src-tauri/src-gui/: app.rs  mod.rs
src-tauri/src-gui/components/devices/: types.rs
src-tauri/src-gui/components/dns/: component.rs  mod.rs
src-tauri/src-gui/components/graph/: mod.rs  types.rs
src-tauri/src-gui/components/replay/: mod.rs  types.rs
src-tauri/src-gui/components/rules/: types.rs
src-tauri/src-gui/components/traffic/: mod.rs
src-tauri/src-gui/i18n/: mod.rs  zh.rs
src-tauri/src/gui/components/: mod.rs
src-tauri/src/gui/components/alerts/: component.rs  mod.rs  types.rs
src-tauri/src/gui/components/certs/: component.rs  mod.rs  types.rs
src-tauri/src/gui/components/devices/: component.rs  mod.rs
src-tauri/src/gui/components/dns/: component.rs  types.rs
src-tauri/src/gui/components/graph/: component.rs
src-tauri/src/gui/components/replay/: component.rs
src-tauri/src/gui/components/rules/: component.rs  mod.rs
src-tauri/src/gui/components/traffic/: component.rs  types.rs
src-tauri/src/gui/i18n/: en.rs
src-tauri/src/gui/styles/: mod.rs
src-tauri/src/tui/: input.rs  mod.rs
src-tauri/src/tui/render/: alerts.rs  certs.rs  devices.rs  dns.rs  gen.rs  graph.rs  mod.rs  replay.rs  rules.rs  traffic.rs
src-tauri/src/tui/wizard/: mod.rs
src-tauri/tests/: test_approval.rs  test_config.rs  test_error.rs  test_input_handler.rs  test_pty_integration.rs  test_state_machine.rs  test_traffic_filtering.rs  test_traffic_golden.rs  test_traffic_property.proptest-regressions  test_traffic_property.rs
src-tauri/tests/bdd/: mod.rs
src-tauri/tests/bdd/features/: steps.rs  traffic.feature
src-tauri/tests/common/: mod.rs
src-tauri/tests/snapshots/: test_approval__controls_pf_off_dns_off.snap  test_approval__controls_pf_on_dns_on.snap  test_approval__filter_bar_all_filters.snap  test_approval__filter_bar_host_filter.snap  test_approval__filter_bar_method_get.snap  test_approval__filter_bar_no_filter.snap  test_approval__filter_bar_search_active.snap  test_approval__filter_bar_status_filter.snap
tasks/: prd-netmind-agent.md  prd-proxybot-ui-redesign.md
(+17 files in other folders)
