[package]
name = "proxybot"
version = "0.1.0"
description = "HTTPS MITM Proxy"
authors = ["you"]
edition = "2021"

[lib]
name = "proxybot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MITM proxy dependencies
tokio = { version = "1", features = ["full"] }
nix = "0.27"
libc = "0.2"
rustls = { version = "0.23", features = ["std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
rcgen = "0.14"
log = "0.4"
env_logger = "0.11"
time = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_yaml = "0.9"
notify = "8"
ipnetwork = "0.20"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
