[package]
name = "proxybot"
version = "0.1.0"
description = "HTTPS MITM Proxy"
authors = ["you"]
edition = "2021"

[lib]
name = "proxybot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
thiserror = "2"

# MITM proxy dependencies
tokio = { version = "1", features = ["full"] }
nix = "0.27"
libc = "0.2"
rustls = { version = "0.23", features = ["std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.1"
rcgen = "0.14"
log = "0.4"
env_logger = "0.11"
time = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_yaml = "0.9"
notify = "8"
ipnetwork = "0.20"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha1 = "0.10"
base64 = "0.22"
futures-util = "0.3"
dashmap = "5"
regex = "1"
tiny_http = "0.12"
tun = "0.5"
ratatui = "0.26"
crossterm = "0.26"

[dev-dependencies]
tempfile = "3"
proptest = "1"
insta = "1.47.2"
rexpect = "0.7.0"
pty = "0.2.2"
cucumber = "0.23.0"

[[bin]]
name = "proxybot-tui"
path = "src/bin/proxybot-tui.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
